--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive-syn-parse = "0.1.5"
+proc-macro2 = { version = "1.0.67", default-features = false }
+syn = { version = "2.0.37", default-features = false, features = ["parsing"] }
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
+syn = { version = "2.0.37", default-features = false, features = [
+    "printing",
+    "extra-traits",
+] }
