--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ pretty_assertions = "1.4.0"
 proc-macro2 = { version = "1.0.67", default-features = false, features = [
     "span-locations",
 ] }
+quote = { version = "1.0.33", default-features = false }
 syn = { version = "2.0.37", default-features = false, features = [
     "printing",
     "extra-traits",
