feat: impl ToTokens

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 derive-syn-parse = "0.1.5"
 proc-macro2 = { version = "1.0.67", default-features = false }
 syn = { version = "2.0.37", default-features = false, features = ["parsing"] }
+quote = { version = "1.0.33", default-features = false }
+derive-quote-to-tokens = { version = "0.1.0", path = "../derive-quote-to-tokens" }
 
 [dev-dependencies]
 colored = "2.0.4"
@@ -18,7 +20,6 @@ pretty_assertions = "1.4.0"
 proc-macro2 = { version = "1.0.67", default-features = false, features = [
     "span-locations",
 ] }
-quote = { version = "1.0.33", default-features = false }
 syn = { version = "2.0.37", default-features = false, features = [
     "printing",
     "extra-traits",
