--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 derive-syn-parse = "0.1.5"
 proc-macro2 = { version = "1.0.67", default-features = false }
-syn = { version = "2.0.37", default-features = false, features = ["parsing"] }
+syn = { version = "2.0.37", default-features = false, features = [
+    "parsing",
+    "printing",
+] }
 quote = { version = "1.0.33", default-features = false }
 derive-quote-to-tokens = { version = "0.1.0", path = "../derive-quote-to-tokens" }
 
