--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ syn = { version = "2.0.37", default-features = false, features = [
 ] }
 quote = { version = "1.0.33", default-features = false }
 derive-quote-to-tokens = { version = "0.1.0", path = "../derive-quote-to-tokens" }
+pretty = "0.12.1"
 
 [dev-dependencies]
 colored = "2.0.4"
