--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,21 +11,22 @@ proc-macro2 = { version = "1.0.67", default-features = false }
 syn = { version = "2.0.37", default-features = false, features = [
     "parsing",
     "printing",
+    "extra-traits",
 ] }
 quote = { version = "1.0.33", default-features = false }
 derive-quote-to-tokens = { version = "0.1.0", path = "../derive-quote-to-tokens" }
 pretty = "0.12.1"
+derive_more = { version = "0.99.17", default-features = false, features = [
+    "display",
+] }
 
 [dev-dependencies]
 colored = "2.0.4"
+either = "1.9.0"
 include_dir = "0.7.3"
 miette = { version = "5.10.0", features = ["fancy"] }
 pretty_assertions = "1.4.0"
 proc-macro2 = { version = "1.0.67", default-features = false, features = [
     "span-locations",
-] }
-syn = { version = "2.0.37", default-features = false, features = [
-    "printing",
-    "extra-traits",
 ] }
 thiserror = "1.0.48"
