--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 derive-syn-parse = "0.1.5"
-proc-macro2 = { version = "1.0.67", default-features = false }
+proc-macro2 = { version = "1.0.67", default-features = false, features = ["span-locations"] }
 syn = { version = "2.0.37", default-features = false, features = [
     "parsing",
     "printing",
