chore: update metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "syn-graphs"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/aatifsyed/syn-graphs"
+documentation = "https://docs.rs/syn-graphs"
+homepage = "https://crates.io/crates/syn-graphs"
+description = "graph description language parsers using syn"
+include = ["extern", "src/*"]
+
+[lib]
+path = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
