--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ derive-quote-to-tokens = "0.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = [
     "display",
 ] }
+petgraph = { version = "0.6.4", default-features = false }
+is_type = "0.2.1"
 
 [dev-dependencies]
 colored = "2.0.4"
@@ -37,3 +39,4 @@ proc-macro2 = { version = "1.0.67", default-features = false, features = [
 ] }
 thiserror = "1.0.48"
 syn-miette = "0.1.0"
+petgraph = "0.6.4"
