--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ syn = { version = "2.0.37", default-features = false, features = [
     "parsing",
     "printing",
     "extra-traits",
+    "clone-impls",
 ] }
 quote = { version = "1.0.33", default-features = false }
 derive-quote-to-tokens = "0.1.0"
